# cmake-template

./: .clang-format  .clang-tidy  .cmake-format  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.backup.yml  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.backup.yml  appveyor.yml  bitbucket-pipelines.yml  codecov.yml  conanfile.py  conanfile.txt  docker-compose.yml  iwyu.imp  lgtm.yml  requirements-dev.txt  requirements-lint.txt  requirements.txt  run.sh  setup.py  valgrind.supp  vcpkg.json  vcpkgfile.txt
.github/workflows/: main.yml
CMake/: CMakeLists.txt.in  googletest-download.cmake
CMake/googletest-download/: CMakeLists.txt.in
cmake/: Coverage.cmake  Diagnostics.cmake  FindCatch2.cmake  FindGSL.cmake  FindGTest.cmake  FindTBB.cmake  Findasio.cmake  Findbenchmark.cmake  Finddoctest.cmake  Findfmt.cmake  Findspdlog.cmake  Format.cmake  Profiling.cmake  ProjectConfig.cmake  ProjectCxxHelpers.cmake  ProjectHelpers.cmake  ProjectPyHelpers.cmake  ProjectUtils.cmake  Sanitizers.cmake  ScriptUtils.cmake  StaticChecks.cmake  Valgrind.cmake  Warnings.cmake  clang-format.cmake  cmake_uninstall.cmake.in  format.cmake  gcovr.cmake  googletest-download.cmake  project-config.cmake.in  uninstall.cmake
cmake/cmade/: Common.cmake  Cxx.cmake  EnableDiagnosticsColor.cmake  Eval.cmake  InstallPackage.cmake  Py.cmake
cmake/download/: CMakeLists.txt.in  Catch2.cmake  GSL.cmake  abseil-cpp.cmake  benchmark.cmake  googletest.cmake  googletest.patch
conan/: any-linux-clang  any-linux-gcc  any-macos-clang  x86-windows-msvc
data/: iwyu.imp  valgrind.supp
doc/: CMakeLists.txt  Doxyfile.in
docker/: build.sh  clang11.Dockerfile  gcc10.Dockerfile
docker/common/: Dockerfile  entrypoint.sh
docker/conan/: Dockerfile
docker/vcpkg/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
examples/: CMakeLists.txt
examples/capicpp/: CMakeLists.txt  capicpp.cpp  capicpp.h  capicpp_test.cpp
examples/clegacy/: CMakeLists.txt  clegacy.cpp  clegacy.h  clegacy_test.cpp
examples/containers/: CMakeLists.txt  remove_duplicates.hpp  remove_duplicates_test.cpp  ssize.hpp  ssize_test.cpp
examples/cppapi/: CMakeLists.txt  cppapi.cpp  cppapi.hpp  cppapi_test.cpp
examples/derived/: CMakeLists.txt  derived.cpp  derived.hpp  derived_test.cpp
examples/finally/: CMakeLists.txt  finally.hpp  finally_test.cpp
examples/memory_resource/: CMakeLists.txt  memory_resource_test.cpp
examples/parallel/: CMakeLists.txt  parallel_test.cpp
examples/ssize/: CMakeLists.txt  ssize.hpp  ssize_test.cpp
examples/tl/: CMakeLists.txt  expected_test.cpp  optional_test.cpp
examples/variant/: CMakeLists.txt  variant_test.cpp
scripts/: run.cmake  run.sh  run2.cmake  run3.cmake  setup.cmake  setup.sh
src/: CMakeLists.txt  Config.h.in  example.hpp  main.cpp
src/capicpp/: CMakeLists.txt  capicpp.cpp  capicpp.h  capicpp_test.cpp
src/catch/: CMakeLists.txt
src/clegacy/: CMakeLists.txt  clegacy.c  clegacy.cpp  clegacy.h  clegacy_test.cpp
src/example/: CMakeLists.txt  Derived.hpp  Derived_test.cpp  derived.cpp  derived.hpp  derived_test.cpp  example.cpp  example.hpp  example_test.cpp  lockable.hpp  lockable_test.cpp
src/gtest/: CMakeLists.txt
src/projname/: CMakeLists.txt  lockable.hpp  lockable_bench.cpp  lockable_benchmark.cpp  lockable_test.cpp  projname.cpp  projname.hpp  projname_fuzz.cpp  projname_fuzzer.cpp  projname_main.cpp  projname_py.cpp  projname_test.cpp
test/: CMakeLists.txt  example-test.cpp  example.cpp
test/catch/: CMakeLists.txt
test/e2e/: CMakeLists.txt  capicpp_e2e_test.cpp  clegacy_e2e_test.cpp  example_e2e_test.cpp
test/unit/: CMakeLists.txt  CoroutinesTS.cpp  example_unit_test.cpp
tests/: CMakeLists.txt  capicpp_int_test.cpp  clegacy_int_test.cpp  example_int_test.cpp  integration_catch2_test.cpp  integration_doctest_test.cpp  integration_test.cpp  projname_test.cpp  test_projname_tool.py  test_pyprojname.py
tools/: run.sh  setup.cmake  setup.sh
