add_library(catch_main)
target_sources(catch_main PRIVATE catch_main.cpp)
if(MSVC)
    set_property(TARGET catch_main PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS ON)
else()
    set_property(TARGET catch_main PROPERTY CXX_VISIBILITY_PRESET default)
endif()
target_link_libraries(catch_main PRIVATE Catch2::Catch2)
