add_library(catch_main)
target_sources(catch_main PRIVATE catch_main.cpp)
target_link_libraries(catch_main PUBLIC Catch2::Catch2)
if(MSVC)
    set_property(TARGET catch_main PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS ON)
else()
    set_property(TARGET catch_main PROPERTY CXX_VISIBILITY_PRESET default)
endif()
